--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.19.2",
+    "antd-img-crop": "^4.2.0",
     "classnames": "^2.3.1",
     "core-js": "^3.21.1",
     "dayjs": "^1.11.0",
